--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-/target/
+.classpath
+.clover
+.factorypath
+.flexProperties
+.project
+.settings
+.springBeans
+.springWebflow
+.metadata
+target
+bin
+rebel.xml
+logs
+*.log
+*.tmp
+/gen
