--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 
 	<repositories>
-		
+
 
 		<repository>
 			<id>spring-maven-release</id>
@@ -33,7 +33,8 @@
 		<aspectj.version>1.7.0</aspectj.version>
 		<java.version>1.7</java.version>
 		<mojarra.version>2.1.7</mojarra.version>
-		<primefaces.version>3.4.2</primefaces.version>
+		<primefaces.version>5.0</primefaces.version>
+		<primefaces.extensions.version>2.0.0</primefaces.extensions.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<querydsl.version>2.7.2</querydsl.version>
@@ -358,6 +359,11 @@
 			<version>1.0.8</version>
 		</dependency>
 		<dependency>
+			<groupId>org.primefaces.extensions</groupId>
+			<artifactId>primefaces-extensions</artifactId>
+			<version>${primefaces.extensions.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2.2</version>
@@ -418,6 +424,14 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.15</version>
 		</dependency>
+		
+		<!-- postgres -->
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901-1.jdbc4</version>
+		</dependency>
+		
 		<!-- Test dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -443,6 +457,18 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.2.4</version>
+		</dependency>
+
+		<!-- heroku -->
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlet</artifactId>
+			<version>7.6.0.v20120127</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
 		</dependency>
 
 	</dependencies>
