--- a/pom.xml
+++ b/pom.xml
@@ -471,6 +471,16 @@
 			<version>2.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.10.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-integration</artifactId>
+			<version>1.1.4.RELEASE</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>locar</finalName>
