--- a/pom.xml
+++ b/pom.xml
@@ -481,6 +481,21 @@
 			<artifactId>spring-boot-starter-integration</artifactId>
 			<version>1.1.4.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>net.wimpi</groupId>
+			<artifactId>telnetd-x</artifactId>
+			<version>2.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-cypher-compiler-2.1</artifactId>
+			<version>2.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-batch</artifactId>
+			<version>1.1.4.RELEASE</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>locar</finalName>
